@@ -1,21 +1,25 @@
 package com.boindang.campaign.application;
 
-import com.boindang.campaign.common.exception.CampaignException;
-import com.boindang.campaign.common.exception.ErrorCode;
+import com.boindang.campaign.common.exception.BadRequestException;
+import com.boindang.campaign.common.exception.CampaignNotFoundException;
 import com.boindang.campaign.domain.model.Campaign;
 import com.boindang.campaign.domain.model.CampaignStatus;
 import com.boindang.campaign.infrastructure.repository.CampaignApplicationRepository;
 import com.boindang.campaign.infrastructure.repository.CampaignRepository;
 import com.boindang.campaign.presentation.dto.response.CampaignDetailResponse;
+import com.boindang.campaign.presentation.dto.response.CampaignListResponse;
 import com.boindang.campaign.presentation.dto.response.CampaignSummaryResponse;
 import com.boindang.campaign.presentation.dto.response.MyApplicationResponse;
 
 import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,36 +29,75 @@ public class CampaignService {
 	private final CampaignRepository campaignRepository;
 	private final CampaignApplicationRepository applicationRepository;
 
-	public List<CampaignSummaryResponse> getCampaigns(String status, int size, int page) {
-		List<Campaign> campaigns;
+	@Transactional // ✅ 반드시 있어야 DB에 상태가 반영됨
+	public CampaignListResponse getCampaigns(String status, int size, int page, Long userId) {
+		LocalDateTime now = LocalDateTime.now(ZoneId.of("Asia/Seoul"));
+		List<Campaign> allCampaigns = campaignRepository.findAll();
 
-		if (status == null) {
-			campaigns = campaignRepository.findAll(PageRequest.of(page, size)).getContent();
-		} else {
-			CampaignStatus statusEnum = switch (status) {
-				case "모집 예정" -> CampaignStatus.PENDING;
-				case "진행중" -> CampaignStatus.OPEN;
-				case "종료" -> CampaignStatus.CLOSED;
-				default -> throw new IllegalArgumentException("유효하지 않은 상태입니다.");
-			};
-			campaigns = campaignRepository.findByStatus(statusEnum, PageRequest.of(page, size));
-		}
+		// ✅ 상태 한 번만 계산 + DB 반영
+		Map<Long, CampaignStatus> statusMap = allCampaigns.stream()
+			.collect(Collectors.toMap(Campaign::getId, c -> c.calculateAndSyncStatus(now)));
 
-		return campaigns.stream()
-			.map(CampaignSummaryResponse::from)
-			.collect(Collectors.toList());
+		// ✅ 상태 필터링
+		List<Campaign> filtered = allCampaigns.stream()
+			.filter(campaign -> {
+				CampaignStatus dynamicStatus = statusMap.get(campaign.getId());
+				if (status == null) return true;
+				return switch (status) {
+					case "진행중" -> dynamicStatus == CampaignStatus.OPEN;
+					case "모집 예정" -> dynamicStatus == CampaignStatus.PENDING;
+					case "종료" -> dynamicStatus == CampaignStatus.CLOSED;
+					default -> throw new BadRequestException("유효하지 않은 상태입니다.");
+				};
+			})
+			.toList();
+
+		// ✅ 정렬
+		List<Campaign> sorted = filtered.stream()
+			.sorted(Comparator
+				.comparing((Campaign c) -> {
+					CampaignStatus s = statusMap.get(c.getId());
+					return switch (s) {
+						case OPEN -> 0;
+						case PENDING -> 1;
+						case CLOSED -> 2;
+					};
+				})
+				.thenComparing(c -> {
+					CampaignStatus s = statusMap.get(c.getId());
+					return switch (s) {
+						case OPEN, CLOSED -> c.getEndDate();
+						case PENDING -> c.getStartDate();
+					};
+				})
+			)
+			.toList();
+
+		// ✅ 페이징
+		int fromIndex = page * size;
+		int toIndex = Math.min(fromIndex + size, sorted.size());
+
+		List<CampaignSummaryResponse> pageContent = sorted.subList(fromIndex, toIndex).stream()
+			.map(campaign -> {
+				boolean isApplied = applicationRepository.existsByCampaignIdAndUserId(campaign.getId(), userId);
+				return CampaignSummaryResponse.from(campaign, isApplied);
+			})
+			.toList();
+
+		int totalPages = (int) Math.ceil((double) sorted.size() / size);
+
+		return new CampaignListResponse(totalPages, pageContent);
 	}
 
 	@Transactional(readOnly = true)
-	public CampaignDetailResponse getCampaignDetail(Long campaignId) {
+	public CampaignDetailResponse getCampaignDetail(Long campaignId, Long userId) {
 		Campaign campaign = campaignRepository.findById(campaignId)
-			.orElseThrow(() -> new CampaignException(ErrorCode.CAMPAIGN_NOT_FOUND));
+			.orElseThrow(() -> new CampaignNotFoundException("해당 체험단이 존재하지 않습니다."));
 
-		// Lazy 초기화 트리거 ✅
-		campaign.getNotices().size();
+		campaign.getNotices().size(); // Lazy 초기화
 
-		campaign.updateStatusByDate(); // 상태 자동 갱신 (선택)
-		return CampaignDetailResponse.from(campaign);
+		boolean isApplied = applicationRepository.existsByCampaignIdAndUserId(campaign.getId(), userId);
+		return CampaignDetailResponse.from(campaign, isApplied);
 	}
 
 	public List<MyApplicationResponse> getMyApplications(Long userId) {
@@ -67,6 +110,5 @@ public class CampaignService {
 			))
 			.collect(Collectors.toList());
 	}
-
 }
 
